update index html with case sensitive image file naming

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div>
             <h1>About Me</h1>
         <br> 
-            <img src="assets/images/Donald.jpg" width="300" height="300" alt="Donald and Me" />
+            <img src="assets/images/Donald.JPG" width="300" height="300" alt="Donald and Me" />
         <br>
             <p>
                 Kimberly "Kim" Maturo-Hilt, is returning to instructing after 30 years. Kim, and her horses joined the Cornerstone family via Copenhagen, Denmark, California and Colorado. Kim is an all-round rider, who showed on the Quarter Horse circuit, New England region, during her early riding career. She will return to the show ring during the 2018 season, with her new AQHA prospect, Duke "Pookie". 
