--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
                       
         <div>
             <h1>About Me</h1>
+            <hr />
         <br> 
             <img src="assets/images/Donald.JPG" width="300" height="300" alt="Donald and Me" />
         <br>
             <p>
-                Kimberly "Kim" Maturo-Hilt, is returning to instructing after 30 years. Kim, and her horses joined the Cornerstone family via Copenhagen, Denmark, California and Colorado. Kim is an all-round rider, who showed on the Quarter Horse circuit, New England region, during her early riding career. She will return to the show ring during the 2018 season, with her new AQHA prospect, Duke "Pookie". 
+                Kimberly <b><q>Kim</q></b> Maturo-Hilt, is returning to instructing after 30 years. Kim, and her horses joined the Cornerstone family via Copenhagen, Denmark, California and Colorado. Kim is an all-round rider, who showed on the Quarter Horse circuit, New England region, during her early riding career. She will return to the show ring during the 2018 season, with her new AQHA prospect, Luke Whos Swooning, also known as <b>Duke</b> or <b>Pookie</b>. 
             </p>    
         
             <p>
@@ -31,11 +32,19 @@
             </p>
 
             <p>
-                On a personal level, Kim is stronger believer in giving back and has served as a volunteer from Equine Camp Counselor, Girl Scout Leader to Therapeutic Riding Counselor most of her life. It is the passion for giving back, that has Kim returning to Instructing and joining our Cornerstone Riding Academy. In Kim's own words "Coaching is not solely about technical instruction. Coaching is about being a mentor, a positive role-model and helping students build skills and more importantly confidence. Horses are merely the conduit in helping them to find and develop the best part of themselves."
+                On a personal level, Kim is stronger believer in giving back and has served as a volunteer from Equine Camp Counselor, Girl Scout Leader to Therapeutic Riding Counselor most of her life. It is the passion for giving back, that has Kim returning to instructing and joining our Cornerstone Riding Academy. In Kim's own words <blockquote> <b>"Coaching is not solely about technical instruction. Coaching is about being a mentor, a positive role-model and helping students build skills and more importantly confidence. Horses are merely the conduit in helping them to find and develop the best part of themselves."</b> </blockquote>
             </p>
 
             <p>
-                Bringing the passion for horses, the all-round riding experience and the deep beliefs of what it means to be a coach together, makes Kim a welcomed fit to the Riding Academy. Kim will focus primarily on our Western Pleasure / Equitation program and on our beginner English students, supporting our Head Hunter/Jumper Coaches. Kim will continue to volunteer at our programs and clinics offered at Cornerstone (Equine Camp, Women's Strong, Equestrian Club). Kim is in-process of certification with ARIA (American Riding Instructor Association) aiming to complete respective certifications by end of 2018.
+                Bringing the passion for horses, the all-round riding experience and the deep beliefs of what it means to be a coach together, makes Kim a welcomed fit to the Riding Academy. Kim will focus primarily on our Western Pleasure / Equitation program and on our beginner English students. Kim will continue to volunteer at our programs and clinics offered at Cornerstone:</p>
+            </p>    
+                <ul>
+                        <Li>Equine Camp</Li>
+                        <li>Women's Strong</li>
+                        <li>Equestrian Club</li>
+                </ul> 
+            <p>    
+                Kim is in-process of certification with <abbr title="American Riding Instructor Association"><b>ARIA</b></abbr> (American Riding Instructor Association) aiming to complete respective certifications by end of 2018.
             </p>
         </div>
 
