adding links to pages and email

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
             
         <div>
             <h1>Kimberly A Maturo-Hilt</h1>
-            <h5>About</h5>
-            <h5>Portfolio</h5>
-            <h5>Contact</h5>
+            <h5> <a href="index.html">About</a></h5>
+            <h5> <a href="portfolio.html">Portfolio</a></h5>
+            <h5> <a href="contact.html">Contact</a></h5>
         </div>
                       
         <div>
@@ -44,7 +44,11 @@
                         <li>Equestrian Club</li>
                 </ul> 
             <p>    
-                Kim is in-process of certification with <abbr title="American Riding Instructor Association"><b>ARIA</b></abbr> (American Riding Instructor Association) aiming to complete respective certifications by end of 2018.
+                Kim is in-process of certification with <abbr title="American Riding Instructor Association"><b>ARIA</b></abbr> <a href="https://www.riding-instructor.com/">American Riding Instructors Association</a> aiming to complete respective certifications by early of 2019.
+            </p>
+
+            <p>
+                To learn more about Kim's training programs, schedule or other information feel free to navigate to the <a href="contact.html">Contact page and leave a mesaage</a> or <a href="mailto:kimberly@cornerstoneonthevermillion.com">Email Kim</a>. 
             </p>
         </div>
 
