--- a/contact.html
+++ b/contact.html
@@ -11,14 +11,14 @@
 
             <div>
                 <h1>Kimberly A Maturo-Hilt</h1>
-                <h5>About</h5>
-                <h5>Portfolio</h5>
-                <h5>Contact</h5>
+                <h5> <a href="index.html">About</a></h5>
+                <h5> <a href="portfolio.html">Portfolio</a></h5>
+                <h5> <a href="contact.html">Contact</a></h5>
             </div>
 
             <div>
 
-                <h1>Contact</h1>
+                <h1>Contact Me</h1>
                 <hr />
 
                 <h3>Name</h3>
