--- a/portfolio.html
+++ b/portfolio.html
@@ -12,9 +12,9 @@
             
         <div>
             <h1>Kimberly A Maturo-Hilt</h1>
-            <h5>About</h5>
-            <h5>Portfolio</h5>
-            <h5>Contact</h5>
+            <h5> <a href="index.html">About</a></h5>
+            <h5> <a href="portfolio.html">Portfolio</a></h5>
+            <h5> <a href="contact.html">Contact</a></h5>
         </div>
                       
         <div>
