updating portfolio page and asset image directory

--- a/portfolio.html
+++ b/portfolio.html
@@ -23,11 +23,22 @@
         </div>
 
         <div>
+                <img src="assets/images/Duke.jpg" alt="Pookie" width="110" height="100" title="Official Luke Whose Swooning Portrait" />
                 <h2>Luke Whos Swooning</h2>
+
+                <img src="assets/images//donald_d.jpg" alt="Big D" width="110" height="100" title="Donald on a fall day in Denmark" />
                 <h2>Donald D Kunis</h2>
+
+                <img src="assets/images//flash.jpg" alt="Flasher" width="110" height="100" title="Flash at home" />
                 <h2>Flash of Ambition</h2>
+
+                <img src="assets/images//six.jpg" alt="Six" width="110" height="100" title="Six at home" />
                 <h2>Ima Six Shooter</h2>
+
+                <img src="assets/images//boomer_jack.jpg" alt="Madness and Chaos" width="110" height="100" title="Boomer and Jack preparing for snow" />
                 <h2>Boomer and Jack</h2>
+
+                <img src="assets/images//student.png" alt="Student and Pookie" width="110" height="100" title="New Student riding Pookie" />
                 <h2>Student Success Stories</h2>
         </div>
 
