--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <h1>About Me</h1>
             <hr />
         <br> 
-            <img src="assets/images/Donald.JPG" width="300" height="300" alt="Donald and Me" />
+            <img src="assets/images/Donald.JPG" width="300" height="300" alt="Donald and Me" title="Kimberly & Donald chillin' in Denmark" />
         <br>
             <p>
                 Kimberly <b><q>Kim</q></b> Maturo-Hilt, is returning to instructing after 30 years. Kim, and her horses joined the Cornerstone family via Copenhagen, Denmark, California and Colorado. Kim is an all-round rider, who showed on the Quarter Horse circuit, New England region, during her early riding career. She will return to the show ring during the 2018 season, with her new AQHA prospect, Luke Whos Swooning, also known as <b>Duke</b> or <b>Pookie</b>. 
@@ -44,7 +44,7 @@
                         <li>Equestrian Club</li>
                 </ul> 
             <p>    
-                Kim is in-process of certification with <abbr title="American Riding Instructor Association"><b>ARIA</b></abbr> <a href="https://www.riding-instructor.com/">American Riding Instructors Association</a> aiming to complete respective certifications by early of 2019.
+                Kim is in-process of certification with <abbr title="American Riding Instructor Association"><b>ARIA</b></abbr> <a href="https://www.riding-instructor.com/" target="_blank">American Riding Instructors Association</a> (will open in a new window) aiming to complete respective certifications by early of 2019.
             </p>
 
             <p>
