--- a/index.html
+++ b/index.html
@@ -21,8 +21,13 @@
             <h1>About Me</h1>
             <hr />
         <br> 
+            <figure>
             <img src="assets/images/Donald.JPG" width="300" height="300" alt="Donald and Me" title="Kimberly & Donald chillin' in Denmark" />
-        <br>
+            <p>
+                <figcaption>Kimberly & Donald chillin' in Denmark</figcaption>
+            </p>    
+            </figure>
+
             <p>
                 Kimberly <b><q>Kim</q></b> Maturo-Hilt, is returning to instructing after 30 years. Kim, and her horses joined the Cornerstone family via Copenhagen, Denmark, California and Colorado. Kim is an all-round rider, who showed on the Quarter Horse circuit, New England region, during her early riding career. She will return to the show ring during the 2018 season, with her new AQHA prospect, Luke Whos Swooning, also known as <b>Duke</b> or <b>Pookie</b>. 
             </p>    
