adding some comments to all html pages for future reference

--- a/portfolio.html
+++ b/portfolio.html
@@ -12,16 +12,18 @@
             
         <div>
             <h1>Kimberly A Maturo-Hilt</h1>
+<!-- Site Navigation Menu -->
             <h5> <a href="index.html">About</a></h5>
             <h5> <a href="portfolio.html">Portfolio</a></h5>
             <h5> <a href="contact.html">Contact</a></h5>
+<!-- End of Site Navigation Menu -->
         </div>
                       
         <div>
             <h1>Portfolio of Accomplishments</h1>
             <hr />
         </div>
-
+<!-- Portfolio Menu Options Start -->
         <div>
                 <img src="assets/images/Duke.jpg" alt="Pookie" width="110" height="100" title="Official Luke Whose Swooning Portrait" />
                 <h2>Luke Whos Swooning</h2>
@@ -41,7 +43,7 @@
                 <img src="assets/images//student.png" alt="Student and Pookie" width="110" height="100" title="New Student riding Pookie" />
                 <h2>Student Success Stories</h2>
         </div>
-
+<!-- Portfolio Menu Options End -->
 
          <div>
                 <p>
