--- a/contact.html
+++ b/contact.html
@@ -11,11 +11,13 @@
 
             <div>
                 <h1>Kimberly A Maturo-Hilt</h1>
+<!-- Site Navigation Menu -->
                 <h5> <a href="index.html">About</a></h5>
                 <h5> <a href="portfolio.html">Portfolio</a></h5>
                 <h5> <a href="contact.html">Contact</a></h5>
+<!-- End of Site Navigation Menu -->
             </div>
-
+<!-- Visitor request for information section start -->
             <div>
 
                 <form method="get">
@@ -67,7 +69,7 @@
                 </form>    
                 
             </div>
-
+<!-- Visitor Request for Information Section End -->
             <p>
             <small> &copy; Copyright </small>
             </p>                            
