submission of first version of CSS; update of html pages for classes and ids

--- a/portfolio.html
+++ b/portfolio.html
@@ -4,14 +4,15 @@
 
 <head>
         <meta charset="utf-8" />    
-        <title>KAMH</title>   
+        <title>KAMH Portfolio</title>
+        <link href="assets/css/style.css" type="text/css" rel="stylesheet" />   
 </head>
    
 <body>
-    <article>
+    <article class="main">
             
-        <div>
-            <h1>Kimberly A Maturo-Hilt</h1>
+        <div id="menu">
+            <h1 id="me">Kimberly A Maturo-Hilt</h1>
 <!-- Site Navigation Menu -->
             <h5> <a href="index.html">About</a></h5>
             <h5> <a href="portfolio.html">Portfolio</a></h5>
