--- a/contact.html
+++ b/contact.html
@@ -12,13 +12,17 @@
     <article class="main">
 
             <div id="menu">
-                <h1 id="me">Kimberly A Maturo-Hilt</h1>
-<!-- Site Navigation Menu -->
-                <h5> <a href="index.html">About</a></h5>
-                <h5> <a href="portfolio.html">Portfolio</a></h5>
-                <h5> <a href="contact.html">Contact</a></h5>
-<!-- End of Site Navigation Menu -->
-            </div>
+                    <h1 id="me">Kimberly A Maturo-Hilt</h1>
+        <!-- Site Navigation menu -->   
+                    <p>
+                    <ul >   
+                        <li class="nav"> <a href="index.html">About</a></li>
+                        <li class="nav"> <a href="portfolio.html">Portfolio</a></li>
+                        <li class="nav"> <a href="contact.html">Contact</a></li>
+                    </ul>
+                    </p>  
+        <!-- End Site Navigation Menu-->    
+                </div>
 <!-- Visitor request for information section start -->
             <div>
 
